--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Share-ish. Become a part of a community that share-ish photosharing. Follow profiles that you like and get inspiration from the whole world."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -30,7 +30,7 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
     crossorigin="anonymous"
     />
-    <title>React App</title>
+    <title>Share-ish</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
